tests/paczka1/fuzzy1/22011581.err
Error in line 5: E7rM A702 15,9
Error in line 11: E7rM S223 24,0
Error in line 10: A118 A702 47,3
Error in line 12: E7rM A246 34,5
Error in line 16: 0iU5 A246 79,0
Error in line 25: A118 A118 70,5
Error in line 34: 0iU5 A118 2,3
